test_regress/t/t_wait_order.out
%Error-UNSUPPORTED: t/t_wait_order.v:15:7: Unsupported: wait_order statement
   15 |       wait_order(e1, e2, e3)
      |       ^~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
